ec2/wordpress/lb.tf
# resource "aws_lb" "load_balancer" {
#   name               = "loadbalancer-wordpress"
#   internal           = false
#   load_balancer_type = "application"
#   security_groups    = [aws_security_group.load_balancer.id]
#   subnets            = data.aws_subnets.name.ids
# }

# resource "aws_lb_listener" "listerner" {
#   load_balancer_arn = aws_lb.load_balancer.arn
#   port              = "80"
#   protocol          = "HTTP"

#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.target_group.arn
#   }
# }

# resource "aws_lb_target_group" "target_group" {
#   name     = "wordpress-target-group"
#   port     = 80
#   protocol = "HTTP"
#   vpc_id   = data.aws_vpc.default.id
# }

# resource "aws_security_group" "load_balancer" {
#   name = "security-group-loadbalancer"
#   ingress {
#     from_port   = 80
#     to_port     = 80
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   depends_on = [aws_security_group.db]
#   vpc_id     = data.aws_vpc.default.id
# }
